# frankenpenguin

./: LICENSE  README.md  index.js  webgl_bg-IBZD3HSL.wasm
.github/workflows/: gh-deploy.yml
frankenpenguin.rs/: Cargo.toml  LICENSE  build.sh
frankenpenguin.rs/animation/: Cargo.toml
frankenpenguin.rs/animation/src/: lib.rs
frankenpenguin.rs/shapes/: Cargo.toml
frankenpenguin.rs/shapes/src/: lib.rs
frankenpenguin.rs/webgl/: Cargo.toml
frankenpenguin.rs/webgl/src/: lib.rs
www/: .gitignore  build.js  package-lock.json  package.json
www/public/: index.html  styles.css
www/src/: index.js
