[workspace]
resolver = "2"

members = ["webgl", "animation", "shapes"]

[workspace.dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.69"
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.77", features = ["console"] }

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
debug = 2
panic = "abort"
strip = "debuginfo"
